@@ -17,6 +17,7 @@
 * Added missing named parameters in CalculationDefinition class.
 * Updated test runner.
 * Updated README with links.
+* Updated commit script to run test runner.
 
 2008.04.11
 
